--- a/src/styles/clima.css
+++ b/src/styles/clima.css
@@ -1,10 +1,15 @@
 div#clima {
+    padding: 1em;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(6px);
     border: 1px solid whitesmoke;
     border-radius: 10px;
+    width: 32em;
 }
 
 aside#container-info-add {
     display: flex;
+    margin: auto;
+    justify-content: center;
+    flex-wrap: wrap;
 }
