estruturando a previsao do tempo com css

--- a/src/styles/previsao-tempo.css
+++ b/src/styles/previsao-tempo.css
@@ -1,4 +1,17 @@
 div#previsao-tempo {
     text-align: center;
     color: whitesmoke;
+    margin: 2em;
+}
+
+img#icone-previsao {
+    width: 180px;
+}
+
+h1#temperatura {
+    font-size: 60px;
+}
+
+h2#local {
+    font-size: 32px;
 }
