--- a/src/styles/clima.css
+++ b/src/styles/clima.css
@@ -2,7 +2,7 @@ div#clima {
     padding: 1em;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
-    border: 1px solid whitesmoke;
+    border: 1px solid var(--bordaElemento);
     border-radius: 10px;
     width: 32em;
 }
