--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,18 @@
 }
 
 body {
-    height: 100vh;
     background-image: url(./assets/wallpaper-site.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
+    height: 100dvh;
 }
 
 main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100dvh;
 }
 
 img {
