--- a/src/styles/clima.css
+++ b/src/styles/clima.css
@@ -1,4 +1,5 @@
 div#clima {
+    margin: 1em;
     padding: 1em;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
@@ -9,7 +10,6 @@ div#clima {
 
 aside#container-info-add {
     display: flex;
-    margin: auto;
     justify-content: center;
     flex-wrap: wrap;
 }
